--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,29 +9,18 @@
 
     <!-- Audio permissions -->
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
-    <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />
+
+    <!-- Storage permissions -->
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"
+        android:maxSdkVersion="32" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+        android:maxSdkVersion="32" />
 
     <!-- Network permissions -->
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
-    <uses-permission android:name="android.permission.CHANGE_WIFI_MULTICAST_STATE" />
-
-    <!-- Storage permissions -->
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"
-        android:maxSdkVersion="32" />
-
-    <!-- Wake lock to keep screen on during streaming -->
-    <uses-permission android:name="android.permission.WAKE_LOCK" />
-
-    <!-- Foreground service for streaming in background -->
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
-
-    <!-- AR permissions and features -->
-    <uses-permission android:name="android.permission.HIGH_SAMPLING_RATE_SENSORS" />
-    <uses-feature android:name="android.hardware.camera.ar" android:required="false" />
-    <uses-feature android:glEsVersion="0x00030000" android:required="true" />
 
     <application
         android:name=".ARCameraStreamerApplication"
@@ -43,32 +32,17 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.ARCameraStreamer"
-        android:usesCleartextTraffic="true"
         tools:targetApi="34">
-
-        <!-- AR required metadata -->
-        <meta-data android:name="com.google.ar.core"
-            android:value="optional" />
 
         <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:screenOrientation="fullSensor"
-            android:theme="@style/Theme.ARCameraStreamer">
-            android:name=".ui.RecoveryActivity"
-            android:exported="false"
-            android:theme="@style/Theme.AppCompat.Light.DarkActionBar"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <service
-            android:name=".streaming.StreamingService"
-            android:foregroundServiceType="camera|microphone"
-            android:enabled="true"
-            android:exported="false" />
 
         <provider
             android:name="androidx.core.content.FileProvider"
@@ -79,6 +53,12 @@
                 android:name="android.support.FILE_PROVIDER_PATHS"
                 android:resource="@xml/file_paths" />
         </provider>
+        <!-- Foreground service for streaming in background -->
+        <service
+            android:name=".streaming.StreamingService"
+            android:foregroundServiceType="camera|microphone"
+            android:enabled="true"
+            android:exported="false" />
     </application>
 
 </manifest>
